--- a/src/css/card.scss
+++ b/src/css/card.scss
@@ -6,24 +6,30 @@ body {
   border-radius: 16px;
   background: #fff;
   padding: 1.20rem;
-  margin: 10rem 1.20rem 0;
+  margin: 50% 1.20rem 0;
   position: relative;
 
   &__image {
     display: flex;
     justify-content: center;
-
+    margin-bottom: 35%;
   }
 
   &__highlight-image {
     position: absolute;
     top: 0;
-    transform: translate(0, -50%);
+    transform: translate(0, -60%);
+    width: 75%;
   }
 
+  &__bg-pattern {
+    position: absolute;
+    transform: translate(0, -20%);
+    width: 75%;
+  }
 
   &__title {
-    margin-top: 8rem;
+    // margin-top: 8rem;
     margin-bottom: 2rem;
     text-align: center;
     color: var(--text-400);
