--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,8 @@
-@import "card.css";
-@import "faq.css";
-* {
+@import "card", "faq";
+
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -15,6 +17,7 @@
   --text-200: hsl(240, 6%, 50%);
   --divider: hsl(240, 5%, 91%);
   --font-size: 0.75rem;
+
   font-family: "Kumbh Sans", Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-synthesis: none;
@@ -30,7 +33,8 @@
   margin-top: 2rem;
   margin-bottom: 2rem;
   color: #fff;
+
+  a {
+    color: hsl(228, 45%, 44%);
+  }
 }
-.attribution a {
-  color: hsl(228deg, 45%, 44%);
-}/*# sourceMappingURL=global.css.map */
