--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -5,6 +5,7 @@
 
   &__list {
     list-style: none;
+    width: 100%;
   }
 
   &__item {
@@ -50,7 +51,10 @@
 
   &__answer {
     color: var(--text-200);
+    display: none;
+
+    .active & {
+      display: block;
+    }
   }
 }
-
-
